applications/kube-prometheus-stack/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-prometheus-stack
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: restricted
  annotations:
    argocd.argoproj.io/sync-options: Prune=false
