applications/kube-prometheus-stack/manifests/grafana-ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-tailscale
  namespace: kube-prometheus-stack
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - grafana
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
