applications/kube-prometheus-stack/manifests/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-prometheus-stack
spec:
  tls:
    - hosts:
        - grafana.mrcontainer.nl
      secretName: grafana-tls
  rules:
    - host: grafana.mrcontainer.nl
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: kube-prometheus-stack-grafana
                port:
                  number: 80
